2026/day-76/terraform/security_group.tf
resource "aws_default_vpc" "observability_vpc_77" { }

resource "aws_security_group" "my_sg_77"{
   name = "Observability-sg_77"
   vpc_id = aws_default_vpc.observability_vpc_77.id
   description = "Observability Server security group "
   

   

  ingress {
    to_port = 80
    from_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
}
  ingress {
      from_port       = 22
      to_port         = 22
      protocol        = "tcp"
      cidr_blocks     = ["0.0.0.0/0"]
  }
  ingress {
      from_port       = 443
      to_port         = 443
      protocol        = "tcp"
      cidr_blocks     = ["0.0.0.0/0"]
  }
    ingress {
      from_port       = 8000
      to_port         = 8000
      protocol        = "tcp"
      cidr_blocks     = ["0.0.0.0/0"]
  }
    ingress {
      from_port       = 9090
      to_port         = 9090
      protocol        = "tcp"
      cidr_blocks     = ["0.0.0.0/0"]
  }
    ingress {
      from_port       = 8080
      to_port         =  8080
      protocol        = "tcp"
      cidr_blocks     = ["0.0.0.0/0"]
  }

    ingress {
      from_port       = 9100
      to_port         = 9100
      protocol        = "tcp"
      cidr_blocks     = ["0.0.0.0/0"]
  }

    ingress {
      from_port       = 3000
      to_port         = 3000
      protocol        = "tcp"
      cidr_blocks     = ["0.0.0.0/0"]
  }
    ingress {
      from_port       = 3100
      to_port         = 3100
      protocol        = "tcp"
      cidr_blocks     = ["0.0.0.0/0"]
  }
    ingress {
      from_port       = 9080
      to_port         = 9080
      protocol        = "tcp"
      cidr_blocks     = ["0.0.0.0/0"]
  }



    ingress {
      from_port       = 8889
      to_port         = 8889
      protocol        = "tcp"
      cidr_blocks     = ["0.0.0.0/0"]
  }


    egress {
      from_port       = 0
      to_port         = 0
      protocol        = "-1"
      cidr_blocks     = ["0.0.0.0/0"]
  }

  tags = {
    Name = var.project_name
  }
}
